# erd-to-ddl

./: .env.template  README.md  main.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
images/logo/: erd2ddl logo ad.afdesign
outputs/: info.txt
src/llm/: custom_llm.py
src/prompt/: ddl_generator_prompt.py  er_normalization_prompt.py
src/ui/: erd_to_ddl_ui.py
src/util/: image_util.py
