[tool.poetry]
name = "erd-to-ddl"
version = "1.0.0"
description = "Generate DDL from ERD"
authors = ["Sumit Sahoo"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
gradio = "^4.15.0"
rich = "^13.7.0"
setuptools = "^69.0.3"
openai = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
