[tool.poetry]
name = "erd-to-ddl"
version = "1.0.0"
description = "Generate DDL from ERD"
authors = ["Sumit Sahoo"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
gradio = "^4.28.3"
rich = "^13.7.1"
setuptools = "^69.5.1"
openai = "^1.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
